# PainPerdu

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  tmp.txt  todo.txt  vcpkg.json
.github/workflows/: static.yml  unit_tests_cpp.yml
cmake/: addTest.cmake
docs/: index.html
examples/: ascii.pain  first.pain  hello_world.pain  print.pain  readfile.pain
help_scripts/linux/: cmake_clang.sh  cmake_gcc.sh
lib/: CMakeLists.txt
lib/EmPainPerdu/: EmPainPerdu.cpp
lib/PainPerdu/: Definitions.hpp  PainPerdu.cpp  PainPerdu.hpp
lib/PainPerdu/misc/: Counter.hpp  Id.hpp  Log.hpp  Result.hpp  Timer.hpp  find.hpp  io.hpp  misc_functors.hpp
lib/PainPerdu/parser/: GetDefinedLabels.hpp  GetDefinedReferences.hpp  Grammar.hpp  ParseException.hpp  Parser.cpp  Parser.hpp  ParsingState.hpp  PatternMatchHelper.hpp  ToToken.hpp  Token.hpp  TreeToDefVisitor.hpp  TreeToToken.hpp
lib/PainPerdu/parser/Patterns/: PatternMatchHelper.hpp  Patterns.hpp
lib/PainPerdu/parser_v2/: Parser.cpp  Parser.hpp
lib/PainPerdu/vm/: Memory.cpp  Memory.hpp  VirtualMachine.cpp  VirtualMachine.hpp
lib/my_lib/: my_lib.cpp  my_lib.hpp
public/: index.html  main.js
test/: CMakeLists.txt
test/boost_ut/: ut.hpp
test/first/: CMakeLists.txt  first_test.cpp
test/functional/: CMakeLists.txt  functional_test.cpp
test/parser/: CMakeLists.txt  parser.cpp
test/pattern_matcher/: CMakeLists.txt  pattern_matcher.cpp
vscode_extention/painperdu-bakery/: CHANGELOG.md  README.md  extension.js  package-lock.json  package.json
vscode_extention/painperdu-bakery/src/: extension.ts
website/: CNAME  main.js
